--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,8 @@
 <head>
     <!--[if lte IE 8]><script type="text/javascript" src="excanvas.js"></script><![endif]-->
+    <script type="text/javascript">
+        if(typeof console === "undefined") { var console = { log: function (logMsg) { } }; }
+    </script>
   <title>Notary Bond</title>
 </head>
 
